--- a/components/container/container.module.css
+++ b/components/container/container.module.css
@@ -2,4 +2,5 @@
   max-width: 55rem;
   margin: 0 auto;
   padding: 0 1em;
+  margin-top: 2em;
 }
