--- a/components/moreLink/more-link.module.css
+++ b/components/moreLink/more-link.module.css
@@ -1,5 +1,5 @@
 .link {
-  margin: 2em 0;
+  margin: 0 0 2em 0;
 }
 
 .link a {
